# industrializing-ml-models

./: .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
notebooks/: titanic.ipynb
notebooks/pt1/: titanic restructured.ipynb
notebooks/pt2/: titanic test.ipynb  titanic train.ipynb
src/titanic/: arguments.py  credentials.py  main.py  models.py  storage.py  transformations.py  visualization.py
tests/: test_credentials.py  test_transformations.py
